tests/conformance/syntax/positive/frontend_valid_unicode_lambda.ditt
module Frontend.SurfaceValidUnicodeLambda where

postulate C : Cat
id : (x : C) -> C = λx. x
