tests/conformance/syntax/negative/frontend_invalid_lambda_dot.ditt
module Frontend.SurfaceBadLambdaDot where

postulate C : Cat
id : (x : C) -> C = \x x
